kubernetes/applications/media/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Tautulli"
    gethomepage.dev/description: "Plex statistics"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "tautulli.png"
    gethomepage.dev/pod-selector: "app=tautulli"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tautulli.shreck.co.uk
    secretName: tautulli-tls
  rules:
  - host: tautulli.shreck.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli
            port:
              number: 8181
